# rhei

./: .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  CLUSTERING.md  Cargo.toml  DRAFT_PIPELINE_API.md  INPROC-ARCH.md  KNOWN-ISSUES.md  LICENSE  PLAN.md  README.md  ROADMAP.md  deny.toml  docker-compose.yml  justfile
.claude/agent-memory/rust-code-reviewer/: MEMORY.md  feedback_gpg_signing.md  user_ron.md
.claude/agents/: frontend-data-ux.md  state-db-engineer.md  streaming-expert.md
.config/: nextest.toml
.github/workflows/: ci-dashboard.yml  ci-e2e.yml  ci.yml  tla_verification.yaml
ADR/: checkpoint-fork.md  checkpoint-manifest.md  checkpoint-restore.md  confine-anyitem.md  coordinated-checkpoint.md  dataflow-graph-api.md  dead-letter-queue.md  multi-process-worker.md  multi-threaded-worker.md  partitioned-source.md  process-internal-layering.md  state-backend.md  temporal-join-timeout.md  thread-per-core.md  time-provider.md  timely-exchange-dag.md  timely-integration.md  tla-verification.md  watermark-propagation.md  web-dashboard.md
docs/: getting-started.md
docs/plans/: 2026-03-07-dashboard-redesign-design.md  2026-03-07-dashboard-redesign.md
python/: pyproject.toml
python/rhei/: __init__.py
rhei/: Cargo.toml
rhei-cli/: Cargo.toml
rhei-cli/src/: main.rs  scaffold.rs
rhei-cli/src/tui/: dashboard.rs  graph_view.rs  log_viewer.rs  mod.rs
rhei-core/: Cargo.toml
rhei-core/src/: checkpoint.rs  config.rs  dlq.rs  error.rs  event.rs  graph.rs  lib.rs  testing.rs  time.rs  traits.rs
rhei-core/src/connectors/: dlq_file_sink.rs  file_sink.rs  partitioned_vec_source.rs  vec_source.rs
rhei-core/src/connectors/kafka/: dlq.rs  sink.rs  source.rs  types.rs
rhei-core/src/operators/: broadcast_join.rs  count_window.rs  enrich.rs  interval_join.rs  keyed_state.rs  late_event.rs  mod.rs  reduce.rs  retract.rs  rolling_aggregate.rs  session_window.rs  sliding_window.rs  temporal_join.rs  tumbling_window.rs  with_side.rs
rhei-core/src/state/: backend.rs  context.rs  fork_backend.rs  list_state.rs  local_backend.rs  map_state.rs  memtable.rs  mod.rs  prefixed_backend.rs  slatedb_backend.rs  tiered_backend.rs  timer_service.rs  value_state.rs
rhei-dashboard/: index.html  package-lock.json  package.json
rhei-dashboard/src/: index.css  main.tsx
rhei-dashboard/src/api/: client.ts  hooks.ts  types.ts
rhei-dashboard/src/components/dashboard/: BackpressureGauge.tsx  CacheHitRates.tsx  HeroKPIs.tsx  LatencyChart.tsx  SecondaryMetrics.tsx  ThroughputChart.tsx
rhei-dashboard/src/components/layout/: Header.tsx  Sidebar.tsx
rhei-dashboard/src/components/logs/: LogFilters.tsx  LogViewer.tsx
rhei-dashboard/src/components/state/: KeyBrowser.tsx  OperatorList.tsx  StateExplorer.tsx  ValueViewer.tsx
rhei-dashboard/src/components/topology/: GraphNode.tsx  PipelineGraph.tsx
rhei-dashboard/src/pages/: Overview.tsx  PipelineDashboard.tsx
rhei-dashboard/src/stores/: pipelines.ts
rhei-macros/: Cargo.toml
rhei-macros/src/: lib.rs  op.rs  op_batch.rs  pipeline.rs  util.rs
rhei-python/: Cargo.toml
rhei-python/src/: connectors.rs  lib.rs  pipeline.rs  sink.rs  source.rs  stream.rs
rhei-runtime/: Cargo.toml
rhei-runtime/examples/: kafka_transform.rs  temporal_join.rs  window_agg.rs  word_count.rs
rhei-runtime/src/: any_item.rs  async_operator.rs  bridge.rs  checkpoint_coord.rs  compiler.rs  controller.rs  dataflow.rs  erased.rs  executor.rs  fanout_recorder.rs  health.rs  http_server.rs  lib.rs  metrics_snapshot.rs  shutdown.rs  stash.rs  task_manager.rs  telemetry.rs  timely_operator.rs  tracing_capture.rs  worker.rs
rhei-runtime/tests/: checkpoint_coord_e2e.rs  checkpoint_restart.rs  fork_mode.rs  kafka_cluster_e2e.rs  kafka_e2e.rs  s3_e2e.rs  timer.rs  watermark.rs
rhei/examples/: pipeline_macro.rs
rhei/src/: lib.rs
rhei/tests/: macro_op.rs  macro_op_batch.rs
rill-cli/: Cargo.toml
rill-cli/src/: main.rs
rill-cli/src/tui/: dashboard.rs  graph_view.rs  log_viewer.rs  mod.rs
rill-core/: Cargo.toml
rill-core/src/: checkpoint.rs  dlq.rs  graph.rs  lib.rs  time.rs  traits.rs
rill-core/src/connectors/: dlq_file_sink.rs  file_sink.rs  kafka_sink.rs  kafka_source.rs  kafka_types.rs  mod.rs  print_sink.rs  vec_source.rs
rill-core/src/connectors/kafka/: dlq.rs  mod.rs  sink.rs  source.rs
rill-core/src/operators/: aggregator.rs  filter.rs  keyed_state.rs  map.rs  mod.rs  session_window.rs  sliding_window.rs  temporal_join.rs  tumbling_window.rs
rill-core/src/state/: backend.rs  context.rs  local_backend.rs  memtable.rs  mod.rs  prefixed_backend.rs  slatedb_backend.rs  tiered_backend.rs
rill-runtime/: Cargo.toml
rill-runtime/examples/: kafka_transform.rs  temporal_join.rs  window_agg.rs  word_count.rs
rill-runtime/src/: async_operator.rs  bridge.rs  checkpoint_coord.rs  compiler.rs  controller.rs  dataflow.rs  executor.rs  http_server.rs  lib.rs  metrics_snapshot.rs  pipeline.rs  shutdown.rs  stash.rs  telemetry.rs  timely_operator.rs  tracing_capture.rs  worker.rs
rill-runtime/tests/: checkpoint_coord_e2e.rs  checkpoint_restart.rs  kafka_cluster_e2e.rs  kafka_e2e.rs  s3_e2e.rs  watermark.rs
src/: main.rs  types.rs
src/storage/: mod.rs  object_stg.rs
tla/: RheiCoordination.cfg  RheiCoordination.tla  RheiCore.cfg  RheiCore.tla
