[workspace]
members = ["rill-core", "rill-runtime", "rill-cli"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
bincode = "1.3"
clap = { version = "4.5.58", features = ["derive"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
timely = "0.26.1"
tokio = { version = "1", features = ["full"] }
foyer = "0.22.3"
slatedb = "0.10.1"
object_store = "0.12"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
tempfile = "3"
