[workspace]
members = ["rhei-core", "rhei-runtime", "rhei-cli"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
bincode = "1.3"
clap = { version = "4.5.58", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
flume = "0.11"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
timely = "0.26.1"
tokio = { version = "1", features = ["full"] }
foyer = "0.22.3"
slatedb = "0.10.1"
object_store = "0.12"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
moka = { version = "0.12", features = ["sync"] }
metrics-exporter-prometheus = "0.16"
ratatui = "0.29"
axum = "0.8"
rdkafka = { version = "0.36", features = ["cmake-build"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
cast_precision_loss = "allow"
needless_pass_by_value = "allow"
