[package]
name = "rhei-runtime"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bincode.workspace = true
flume.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
timely.workspace = true
tokio.workspace = true
rhei-core = { path = "../rhei-core" }
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
seahash = "4"
core_affinity = "0.8"
# rdkafka is an optional dep activated by the `kafka` feature so that
# `cargo test --workspace` (without --features kafka) doesn't require
# libcurl-dev / cmake to build librdkafka.
rdkafka = { workspace = true, optional = true }
object_store = { workspace = true, features = ["aws"], optional = true }

[features]
kafka = ["rhei-core/kafka", "dep:rdkafka"]
remote-state = ["dep:object_store"]

[lints]
workspace = true

[[example]]
name = "kafka_transform"
required-features = ["kafka"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true
