[package]
name = "rhei"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Rhei stream processing engine — facade crate"

[dependencies]
rhei-macros = { path = "../rhei-macros" }
rhei-core = { path = "../rhei-core" }
rhei-runtime = { path = "../rhei-runtime" }
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true
clap = { workspace = true, features = ["derive", "env"] }

[features]
kafka = ["rhei-core/kafka", "rhei-runtime/kafka"]
remote-state = ["rhei-runtime/remote-state"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
serde.workspace = true

[lints]
workspace = true
