[package]
name = "rill-runtime"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
timely.workspace = true
tokio.workspace = true
rill-core = { path = "../rill-core" }
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
seahash = "4"

[features]
kafka = ["rill-core/kafka"]

[lints]
workspace = true

[[example]]
name = "kafka_transform"
required-features = ["kafka"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
