[package]
name = "rill-runtime"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bincode.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
timely.workspace = true
tokio.workspace = true
rill-core = { path = "../rill-core" }
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
seahash = "4"
# rdkafka is an optional dep activated by the `kafka` feature so that
# `cargo test --workspace` (without --features kafka) doesn't require
# libcurl-dev / cmake to build librdkafka.
rdkafka = { workspace = true, optional = true }
object_store = { workspace = true, features = ["aws"], optional = true }

[features]
kafka = ["rill-core/kafka", "dep:rdkafka"]
s3 = ["dep:object_store"]

[lints]
workspace = true

[[example]]
name = "kafka_transform"
required-features = ["kafka"]

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true
